<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_setting"
    android:orientation="vertical">

    <LinearLayout
        style="@style/CustomLilerSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/nofitication" />

        <Switch
            android:id="@+id/sw_notification"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/width40dp"
            android:layout_weight="0.2"
            android:checked="false"
            android:gravity="center"
            android:thumb="@drawable/customswitchselector"
            android:track="@drawable/custom_track" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lnLanguage"
        style="@style/CustomLilerSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            style="@style/RedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/language" />

        <TextView
            android:id="@+id/layble_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="text"
            android:textColor="@color/green" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/width20dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/ic_next" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/lnTearm"
        style="@style/CustomLilerSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/term_and_condition" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/width20dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/ic_next"
            android:tint="@color/green" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/lnPrivacy"
        style="@style/CustomLilerSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/policy" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/width20dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/ic_next"
            android:tint="@color/green" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/lnContactus"
        style="@style/CustomLilerSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contact" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/width20dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/ic_next"
            android:tint="@color/green" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/lnWithdraw"
        style="@style/CustomLilerSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/withdraw" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/width20dp"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/ic_next"
            android:tint="@color/green" />
    </LinearLayout>
</LinearLayout>
